<resources>
    <string name="app_name">IceAndFire</string>
    <string name="app_detail">Book details</string>
    <string name="action_settings">Settings</string>
    <string name="name_of_book">Name of book</string>
    <string name="pages">pages</string>
    <string name="release_date">Release date</string>
    <string name="number_characters">NumOfChar</string>
    <string name="dialog_titul">Downloading books</string>
    <string name="message">Message</string>
    <string name="request_error">Request error</string>
    <string name="book_title">Book title:</string>
    <string name="number_pages">Number of pages:</string>

    <string name="authors">Authors:</string>
    <string name="publisher">Publisher:</string>
    <string name="country">Country:</string>
    <string name="mediaType">MediaType:</string>

    <string name="heroes">List Of characters</string>

    <string name="name_of_character">Name of character</string>
    <string name="gender">Gender</string>
    <string name="dignity">Dignity</string>


    <plurals name="name_toolbar">
        <item quantity="zero">нет героев</item>
        <item quantity="one">%1$d герой</item>
        <item quantity="two">%1$d героя</item>
        <item quantity="few">%1$d героя</item>
        <item quantity="many">%1$d героев</item>
        <item quantity="other">%1$d героев</item>
    </plurals>

</resources>
