<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_medium"
    >

    <!--android:background="?selectableItemBackground"-->

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_start"
        android:layout_marginStart="@dimen/padding_start"
        android:layout_marginTop="@dimen/padding_element_vertical"
        android:textSize="@dimen/text_size_book"
        android:textColor="@color/textColorActive"
        tools:text="@string/name_of_book"

        />

    <TextView
        android:id="@+id/tvPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_element_vertical"
        android:layout_marginBottom="@dimen/padding_element_vertical"
        android:layout_below="@+id/tvName"
        android:layout_marginEnd="@dimen/padding_start"
        android:layout_marginStart="@dimen/padding_start"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textColorActive"
        tools:text="@string/number_pages"

        />

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pages"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textColor"
        android:textStyle="bold"

        android:layout_alignBottom="@+id/tvPage"
        android:layout_toRightOf="@+id/tvPage"
        android:layout_toEndOf="@+id/tvPage"


        />

    <ImageView
        android:id="@+id/imageRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvRelease"
        app:srcCompat="@drawable/ic_date_range_black_24dp"
        android:layout_marginRight="@dimen/padding_element_horizontal"
        android:layout_toLeftOf="@+id/tvRelease"

        />

    <TextView
        android:id="@+id/tvRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_end"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textColorActive"
        tools:text="@string/release_date"

        />
    <ImageView
        android:id="@+id/imageCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvCharacter"
        app:srcCompat="@drawable/ic_people_black_24dp"
        android:layout_alignLeft="@+id/imageRelease"
        android:layout_alignStart="@+id/imageRelease"
        />

    <TextView
        android:id="@+id/tvCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPage"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/tvRelease"
        android:layout_alignStart="@+id/tvRelease"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textColorActive"
        tools:text="@string/number_characters"
        />

</RelativeLayout>