<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    >

    <TextView
        android:id="@+id/tvAut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:textSize="@dimen/text_size_titul"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorActive"
        android:textSize="@dimen/text_size_book"
        android:layout_alignBottom="@+id/tvAut"
        android:layout_toRightOf="@+id/tvAut"
        android:layout_toEndOf="@+id/tvAut"
        android:layout_marginLeft="@dimen/padding_element_horizontal"
        android:layout_marginStart="@dimen/padding_element_horizontal"
        tools:text="@string/authors"
        />
    <TextView
        android:id="@+id/tvPub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publisher"
        android:textSize="@dimen/text_size_titul"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@+id/tvAut"
        android:layout_marginTop="@dimen/padding_element_vertical"
        />
    <TextView
        android:id="@+id/tvPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorActive"
        android:textSize="@dimen/text_size_book"
        android:layout_alignBottom="@+id/tvPub"
        android:layout_toRightOf="@+id/tvPub"
        android:layout_toEndOf="@+id/tvPub"
        android:layout_marginLeft="@dimen/padding_element_horizontal"
        android:layout_marginStart="@dimen/padding_element_horizontal"
        tools:text="@string/publisher"
        />
    <TextView
        android:id="@+id/tvCoun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="@dimen/text_size_titul"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@+id/tvPub"
        android:layout_marginTop="@dimen/padding_element_vertical"
        />
    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorActive"
        android:textSize="@dimen/text_size_book"
        android:layout_alignBottom="@+id/tvCoun"
        android:layout_toRightOf="@+id/tvCoun"
        android:layout_toEndOf="@+id/tvCoun"
        android:layout_marginLeft="@dimen/padding_element_horizontal"
        android:layout_marginStart="@dimen/padding_element_horizontal"
        tools:text="@string/country"
        />
    <TextView
        android:id="@+id/tvMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediaType"
        android:textSize="@dimen/text_size_titul"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@+id/tvCoun"
        android:layout_marginTop="@dimen/padding_element_vertical"
        />
    <TextView
        android:id="@+id/tvMediatype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorActive"
        android:textSize="@dimen/text_size_book"
        android:layout_alignBottom="@+id/tvMed"
        android:layout_toRightOf="@+id/tvMed"
        android:layout_toEndOf="@+id/tvMed"
        android:layout_marginLeft="@dimen/padding_element_horizontal"
        android:layout_marginStart="@dimen/padding_element_horizontal"
        tools:text="@string/mediaType"
        />

    <Button
        android:id="@+id/tvHerous"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_button"

        android:layout_below="@+id/tvMed"
        android:layout_marginTop="@dimen/padding_element_vertical"
        android:text="@string/heroes"
        android:textSize="@dimen/text_size"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:paddingLeft="16sp"
        android:paddingRight="16sp" />
    <!--android:textColor="@color/btn_text_color"-->

</RelativeLayout>